suppression anciens collaborateurs et mise à jour par nouveaux membres de l'équipe

--- a/css/global.css
+++ b/css/global.css
@@ -1482,7 +1482,7 @@ margin-left:-32px;
 }
  /* ---------------------------  Inner page       ------------------ */
 .title-bar {
-    background: url("../images/title-bg.png") no-repeat scroll 0 0 transparent;
+    background: url("../images/title-bg.jpg") no-repeat scroll 0 0 transparent;
     padding: 23px 0;
 }
 .t-shadow{    background: url("../images/title-shadow.png") no-repeat scroll center 0 transparent;}
@@ -1495,7 +1495,7 @@ margin-left:-32px;
     padding: 20px 0;
 }
 .tbg-2 {
-    background: url("../images/title-bg2.png") no-repeat scroll center 0 #57616A;
+    background: url("../images/title-bg2.jpg") no-repeat scroll center 0 #57616A;
     padding: 20px 0;
 }
 .title-bar {
